# Kaggle-competitions

./: .gitignore  README.md
cis-fraud-detection/: DATA.ipynb  README.md  main.ipynb  pyproject.toml
cis-fraud-detection(in-progress)/utils/: format_utils.py
cis-fraud-detection/other/: data_summary.csv
cis-fraud-detection/utils/: format_utils.py  plot_utils.py
german-credit-risk/: .gitignore  pyproject.toml
german-credit-risk/work/: README.md  eda.ipynb  models.ipynb  utils.py
news-articles-classifier/: main.ipynb  pyproject.toml
shop-sales-prediction/: main.ipynb  model2_XgBoost.ipynb  pyproject.toml
