[tool.poetry]
name = "shop-sales-prediction"
version = "0.1.0"
description = ""
authors = ["Aleksa Mihajlovic <mihajlovic.aleksa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.3.3,<3.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
matplotlib = ">=3.10.7,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
category-encoders = ">=2.8.1,<3.0.0"
xgboost = ">=3.0.5,<4.0.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
